src/css/pages/_product.scss
/* ... */
.animate4 {
    animation-name: moveFromTop;
    animation-duration: 2s;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes colorChange {
    from {
        background-color: transparent;
    }

    to {
        background-color: #ecd97d5b;
    }
}

@keyframes moveFromLeft {
    from {
        left: -38px;
    }
}

@keyframes moveFromTop {
    from {
        top: -38px;
    }
}

.gradient_container_ii {
    background-image: url(/images/Frame172.png);
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    flex-direction: column;
    align-items: center;

    @media (max-width: 768px) {
        background: linear-gradient(to bottom, #324770, #1B2944);
    }

    .engo_products {
        background-image: url(/images/filterwtablet.png);
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        align-items: flex-end;
        width: 100%;
        height: 110vh;
        position: relative;

        @media (max-width: 1024px) {
            background-image: none;
            display: flex;
            flex-direction: column;
            justify-content: flex-start;
            align-items: center;
            height: fit-content;
        }

        .two-machines {
            position: absolute;
            top: 100px;
            left: 20%;
            height: 62px;
            display: flex;
            align-items: flex-end;

            @media (max-width: 1024px) {
                top: 60px;
                left: 80px;
            }

            @media (max-width: 768px) {
                top: 60px;
                left: 45px;
            }

            &-txt {
                background-image: url(/assets/drip.png);
                background-repeat: no-repeat;
                background-size: contain;
                background-position: center;
                display: flex;
                align-items: flex-end;
                padding-bottom: 17px;
                justify-content: center;
                width: 55px;
                height: 90px;
                margin-right: 16px;

                @media (max-width: 768px) {
                    margin-right: 0;
                    height: 64px;
                }

                &-lines {
                    padding-top: 8px;
                    padding-bottom: 8px;
                    margin-bottom: 9px;
                    border-top: 1px solid #F5F5F5;
                    border-bottom: 1px solid #F5F5F5;

                    @media (max-width: 768px) {
                        border-top: 1px solid $grey-blue2;
                        border-bottom: 1px solid $grey-blue2;
                    }
                }

            }

            img {
                width: 55px;
                height: 87px;

                @media (max-width: 768px) {
                    width: 28px;
                    height: 44px;
                }
            }

        }

        .tag {
            width: fit-content;
            align-items: center;
            border-radius: 25px;
            background-color: #043655;

            img {
                padding-right: 4px;
            }

            @media (max-width: 768px) {
                border-radius: 0;
                width: 100vw;
                position: absolute;
                top: 0;
                left: 0;
            }
        }

        .two-machines-bg {
            width: 100%;
            height: 50vw;

            .machine01 {
                z-index: 0;
                max-width: 40vw;

                img {
                    width: 100%;
                }
            }

            .machine02 {
                z-index: 1;
                right: 0;
                max-width: 50vw;

                img {
                    width: 100%;
                }

                h4 {
                    width: 80%;
                    right: 0;
                    bottom: 0;
                }
            }
        }
    }

    .filter_strength {
        .tag {
            display: flex;
            width: fit-content;
            align-items: center;
            border-radius: 25px;
            background-color: #043655;
            color: white;
            padding: 8px 16px;

            img {
                padding-right: 4px;
            }

            @media (max-width: 768px) {
                border-radius: 0;
                width: 100vw;
                margin-left: -5vw;
            }
        }

        .water-loop {
            max-width: 100%;

            img {
                width: 100%;
            }
        }
    }

    .filter-core {
        width: 70%;
        position: relative;

        @media (max-width: 768px) {
            width: 60%;

        }

        .qr-code-container {
            position: absolute;
            bottom: 0;
            left: -140px;
            display: flex;
            flex-direction: column;
            align-items: center;
            height: 115px;
            justify-content: space-between;

            @media (max-width: 768px) {
                left: -70px;
                height: 85px;

                img {
                    width: 70%;
                }
            }
        }

        img {
            width: 100%;
        }

    }

    .filter_types {
        .img_wrap {
            max-width: 100%;

            img {
                width: 100%;
            }
        }

        .swiper-button-prev,
        .swiper-button-next {
            width: 30px !important;
            height: 30px !important;
            border: 1px solid #333;
            border-radius: 999em;
        }

    }

    .filter_detail_btn {
        border-radius: 25px;
    }
}
/* ... */

